# poster-generator

./: .env.example  Dockerfile  README.md  download_fonts.py  fontlinks.py  gunicorn_conf.py  poster_generator.py  pyproject.toml  requirements.txt  utils.py  webapp.py
static/: main.css
templates/: mainpage.html  result.html
