[tool.poetry]
name = "poster-generator"
version = "0.1.0"
description = "Spotify Album Poster Generator"
authors = ["Anveshak Rathore <rathoreanveshak@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "^1.7.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
idna = "^3.6"
imageio = "^2.33.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.3"
joblib = "^1.3.2"
langid = "^1.1.6"
lazy_loader = "^0.3"
MarkupSafe = "^2.1.5"
networkx = "^3.2.1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
packaging = "^23.2"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
PyWavelets = "^1.5.0"
requests = "^2.31.0"
scikit-image = "^0.22.0"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
threadpoolctl = "^3.2.0"
tifffile = "^2024.1.30"
urllib3 = "^2.2.0"
Werkzeug = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
